--- a/Projekt.html
+++ b/Projekt.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Quentin Tarantino | Režisér</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" >
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body id="home">
+    <nav id="navbar">
+        <div id="logo"><a href="index.html"><i class="fa-solid fa-book-open text-primary"></i>Quentin Tarantino | <span 
+        class="text primary"> Režisér</span></a></div>
+        <ul>
+            <li><a href="#home"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="#filmy">Filmy</a></li>
+            <li><a href="ocenění">Ocenění</a></li>
+            <li><a href="životopis">Životopis</a></li>
+            <li><a href="zdroje">Zdroje</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
