--- a/Projekt.html
+++ b/Projekt.html
@@ -11,15 +11,57 @@
 </head>
 <body id="home">
     <nav id="navbar">
-        <div id="logo"><a href="index.html"><i class="fa-solid fa-book-open text-primary"></i>Quentin Tarantino | <span 
+        <div id="logo"><a href="index.html"><i class="fa-solid fa-film-open text-primary"></i>Quentin Tarantino | <span 
         class="text primary"> Režisér</span></a></div>
         <ul>
-            <li><a href="#home"><i class="fa-solid fa-house"></i></a></li>
+            <li><a href="#home"><i class="fa-solid fa-film"></i></a></li>
             <li><a href="#filmy">Filmy</a></li>
             <li><a href="ocenění">Ocenění</a></li>
             <li><a href="životopis">Životopis</a></li>
             <li><a href="zdroje">Zdroje</a></li>
         </ul>
     </nav>
+
+
+<div id="showcase">
+    <div class="showcase-content">
+        <h1 class="l-heading">Milujeme filmy, filmy milují nás</h1>
+        <p class="lead">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel neque, ad quidem aliquam libero temporibus explicabo cupiditate necessitatibus laborum itaque aut debitis, id voluptatibus voluptatem impedit officia dolore! Explicabo, nulla.
+        </p>
+        <a href="#what" class="btn">Dozvědět se víc</a>
+    </div>
+</div>
+<section id="what" class="bg-light py-1">
+    <div class="container">
+        <h2 class="m-heading text center">
+            <span class="text-primary">Co</span> se dozvíte o slavném režiséru?
+        </h2>
+        <div class="items">
+            <div class="item">
+                <i class="fas fa-question mark fa-2x"></i>
+                <div>
+                    <h3>Zajímavé fakta</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam saepe inventore, nulla ex maiores delectus recusandae, maxime necessitatibus soluta laudantium voluptate sunt laboriosam sequi illo natus qui odit temporibus similique.
+                    </p>
+        <div class="items">
+            <div class="item">
+                 <i class="fas fa-person fa-2x"></i>
+                 <div>
+                     <h4>Život slavného režiséra</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque cum porro commodi corrupti aliquam harum fugit nulla atque minus itaque facere quidem id beatae temporibus, maiores officia dolor? Facere, voluptas?
+                    </p>
+        <div class="items">
+            <div class="item">
+                    <i class="fas fa-film fa-2x"></i>
+                    <div>
+                        <h5>Jeho nejlépe hodnocené filmy</h5>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus est maiores aliquid vero earum commodi beatae libero natus? Quos numquam nemo nam doloribus ullam quia, tenetur enim atque quibusdam id!
+                        </p>
+         
+</section>
 </body>
 </html>
