--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
     <li>Technik a správce stránky: Štěpán Scholaster</li>
     </ul>
 </div>
-<footer id="main-footer" class="bg-dark text-center py-1"></footer>
+<footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container">
+        <p>Copyright &copy; 2023, Studio Trhák</p>
+    </div>
+</footer>
+<script
+  src="https://code.jquery.com/jquery-3.7.1.js"
+  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+  crossorigin="anonymous">
+</script>
 </section>
 </body>
 </html>
