--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="showcase-content">
         <h1 class="l-heading">Milujeme filmy, filmy milují nás</h1>
         <p class="lead">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel neque, ad quidem aliquam libero temporibus explicabo cupiditate necessitatibus laborum itaque aut debitis, id voluptatibus voluptatem impedit officia dolore! Explicabo, nulla.
+            Máte rádi filmy a režiséry jako je třeba Quentin Tarantino? Pokud ano, jste na správném místě.
         </p>
         <a href="#what" class="btn">Dozvědět se víc</a>
     </div>
@@ -41,23 +41,50 @@
                 <div>
                     <h3>Filmy</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam saepe inventore, nulla ex maiores delectus recusandae, maxime necessitatibus soluta laudantium voluptate sunt laboriosam sequi illo natus qui odit temporibus similique.
+                        Pulp Fiction: Historky z podsvětí (Pulp Fiction, 1994)
+                    </p>
+                    <p>
+                        Čtyři pokoje (Four Rooms, 1995, povídka Muž z Hollywoodu)
+                    </p>
+                    <p>
+                        Hanebný pancharti (Inglourious Basterds, 2009)
+                    </p>
+                    <p>
+                        Nespoutaný Django (Django Unchained, 2012)
+                    </p>
+                    <p>
+                        Tenkrát v Hollywoodu (Once Upon a Time in Hollywood, 2019)
                     </p>
         <div class="items">
             <div class="item">
                  <i class="fas fa-person fa-2x"></i>
                  <div>
-                     <h4>Životopis</h4>
+                     <h3>Životopis</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque cum porro commodi corrupti aliquam harum fugit nulla atque minus itaque facere quidem id beatae temporibus, maiores officia dolor? Facere, voluptas?
+                        Quentin Jerome Tarantino (* 27. března 1963 Knoxville, Tennessee) je americký filmový režisér, scenárista a herec, který začátkem devadesátých let proslul jako svěží, drsný i černohumorný vypravěč, který vnesl do tradičních amerických archetypů nový život.
+                        Svoji filmovou kariéru začínal jako uvaděč v kině. 
+                    <p>
+                        Nějaký čas byl i uvaděčem v pornokině. Tuto práci označil jako úplně nejlepší, filmová režie je podle něj až na druhém místě. Když mu bylo 22 let odešel z práce v pornokinu a pracoval následujících pět let ve videopůjčovně VideoArchives.
+                    </p>
+                    <p>
+                        Než se stal slavným scenáristou a režisérem, pobyl krátce i ve vězení, kde skončil kvůli nezaplacenému parkování.
                     </p>
         <div class="items">
             <div class="item">
                     <i class="fas fa-trophy fa-2x"></i>
                     <div>
-                        <h5>Ocenění</h5>
+                        <h3>Ocenění</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus est maiores aliquid vero earum commodi beatae libero natus? Quos numquam nemo nam doloribus ullam quia, tenetur enim atque quibusdam id!
+                           Academy Awards - 2013 - Nespoutaný Django - (nejlepší původní scénář). 1995 - Pulp Fiction: Historky z podsvětí (nejlepší původní scénář).
+                        </p>
+                        <p>
+                            Golden Globes - 2020 - Tenkrát v Hollywoodu - (nejlepší scénář). 2013 - Nespoutaný Django - (nejlepší scénář). 1995 - Pulp Fiction: Historky z podsvětí - (nejlepší scénář)
+                        </p>
+                        <p>
+                            Cannas Film Festival - 1994 - Pulp Fiction: Historky z podsvětí - (zlatá palma)
+                        </p>
+                        <p>
+                            BAFTA - 2013 - Nespoutaný Django - (Nejlepší původní scénář). 1995 - Pulp Fiction: Povídky z podsvětí - (Nejlepší původní scénář).
                         </p>
 </section>
 <section id="who">
@@ -67,12 +94,17 @@
         <span class="text-primary">CO</span> DĚLÁME?
     </h2>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore sint fugit dolore accusamus sunt fuga sequi, veritatis exercitationem consequatur culpa perferendis asperiores, porro placeat eum at? Debitis tempora doloremque at.
+        Milujeme filmy a talentované lidi, kteří v něm hrají nebo se podílí na produkci.
+    </p>
+    <p>
+        Rádi píšem informace, novinky a zajímavosti o hercích, scenáristech a režisérech.
     </p>
     <h3>Náš tým</h3>
     <ul class="list">
     <li>Mysl všech článků: Michal Lupík</li>
     <li>Technik a správce stránky: Štěpán Scholaster</li>
+    <li>Email: studiotrhak@gmail.com</li>
+    <li>Kontakt: +420 731 760 208</li>
     </ul>
 </div>
 <footer id="main-footer" class="bg-dark text-center py-1">
