--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#filmy">Filmy</a></li>
             <li><a href="ocenění">Ocenění</a></li>
             <li><a href="životopis">Životopis</a></li>
-            <li><a href="zdroje">Zdroje</a></li>
+            <li><a href="tabulka.html">Tabulka</a></li>
         </ul>
     </nav>
 <div id="showcase">
@@ -86,6 +86,8 @@
                         <p>
                             BAFTA - 2013 - Nespoutaný Django - (Nejlepší původní scénář). 1995 - Pulp Fiction: Povídky z podsvětí - (Nejlepší původní scénář).
                         </p>
+        </div>
+            </div>
 </section>
 <section id="who">
 <div class="who-img"></div>
