--- a/tabulka.html
+++ b/tabulka.html
@@ -17,10 +17,12 @@
             </h1>
         </a>
         <ul>
-            <li><a href="index.html#filmy">Filmy</a></li>
-            <li><a href="index.html#ocenění">Ocenění</a></li>
-            <li><a href="index.html#Životopis">Životopis</a></li>
-            <li><a href="tabulka.html">Tabulka</a></li>
+            <li><a href="#home"><i class="fa-solid fa-home"></i></a></li>
+            <li><a href="#filmy">FILMY     <i class="fa-solid fa-film"></i></a></li>
+            <li><a href="#ocenění">OCENĚNÍ   <i class="fa-solid fa-trophy"></i></a></li>
+            <li><a href="životopis">ŽIVOTOPIS    <i class="fa-solid fa-person"></i></a></li>
+            <li><a href="tabulka.html">TABULKA    <i class="fa-solid fa-folder"></i></a></li>
+            <li><a href="obrazky.html">Obrázky   <i class="fa-solid fa-camera"></i></a></li>
         </ul>
     </nav>
     <section id="tabulka" class="py-1">
