--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <div id="logo"><a href="index.html"><i class="fa-solid fa-film-open text-primary"></i>Quentin Tarantino | <span 
         class="text primary"> Režisér</span></a></div>
         <ul>
-            <li><a href="#home"><i class="fa-solid fa-film"></i></a></li>
-            <li><a href="#filmy">Filmy</a></li>
-            <li><a href="ocenění">Ocenění</a></li>
-            <li><a href="životopis">Životopis</a></li>
-            <li><a href="tabulka.html">Tabulka</a></li>
+            <li><a href="#home"><i class="fa-solid fa-home"></i></a></li>
+            <li><a href="#filmy">FILMY     <i class="fa-solid fa-film"></i></a></li>
+            <li><a href="#ocenění">OCENĚNÍ   <i class="fa-solid fa-trophy"></i></a></li>
+            <li><a href="životopis">ŽIVOTOPIS    <i class="fa-solid fa-person"></i></a></li>
+            <li><a href="tabulka.html">TABULKA    <i class="fa-solid fa-folder"></i></a></li>
+            <li><a href="obrazky.html">Obrázky   <i class="fa-solid fa-camera"></i></a></li>
         </ul>
     </nav>
 <div id="showcase">
