--- a/obrazky.html
+++ b/obrazky.html
@@ -12,10 +12,10 @@
     <h1>Výstava obrázků vytvořených umělou inteligencí při natáčení filmů Quentina Tarantina</h1>
     <nav>
       <ul>
+        <li><a href="index.html">Zpět na hlavní stránku</a></li>
         <li><a href="#o-projektu">O projektu</a></li>
         <li><a href="#galerie">Galerie</a></li>
         <li><a href="#kontakt">Kontakt</a></li>
-        <li><a href="galerie.html">Galerie obrázků</a></li>
       </ul>
     </nav>
   </header>
@@ -53,6 +53,10 @@
         <div class="popisek">Inglorious Bastards</div>
       </div>
   </section>
+
+  <div style="text-align: center; margin-top: 20px;">
+    <a href="index.html" class="btn" style="text-decoration: none; padding: 10px 20px; background-color: #333; color: #fff; border-radius: 5px;">Zpět na hlavní stránku</a>
+  </div>
 
   <section id="kontakt">
     <h2>Kontakt</h2>
