--- a/tabulka.html
+++ b/tabulka.html
@@ -27,7 +27,7 @@
     </nav>
     <section id="tabulka" class="py-1">
         <div class="container">
-            <h2 class="m-heading text-center">Quentin Tarantino
+            <h2 class="m-heading text-center">Quentin Tarantino - Oblíbené filmy fanoušků
             </h2>
 
             <table class="my-table">
