--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         class="text primary"> Režisér</span></a></div>
         <ul>
             <li><a href="#home"><i class="fa-solid fa-home"></i></a></li>
-            <li><a href="#filmy">FILMY     <i class="fa-solid fa-film"></i></a></li>
-            <li><a href="#ocenění">OCENĚNÍ   <i class="fa-solid fa-trophy"></i></a></li>
-            <li><a href="životopis">ŽIVOTOPIS    <i class="fa-solid fa-person"></i></a></li>
+            <li><a href="filmy.html">FILMY <i class="fa-solid fa-film"></i></a></li>
+            <li><a href="oceneni.html">OCENĚNÍ <i class="fa-solid fa-trophy"></i></a></li>
+            <li><a href="zivotopis.html">ŽIVOTOPIS <i class="fa-solid fa-person"></i></a></li>
             <li><a href="tabulka.html">TABULKA    <i class="fa-solid fa-folder"></i></a></li>
             <li><a href="obrazky.html">Obrázky   <i class="fa-solid fa-camera"></i></a></li>
         </ul>
     </nav>
 <div id="showcase">
     <div class="showcase-content">
-        <h1 class="l-heading">Milujeme filmy, filmy milují nás</h1>
+        <h1 class="l-heading">Filmy Quentin Tarantina</h1>
         <p class="lead">
             Máte rádi filmy a režiséry jako je třeba Quentin Tarantino? Pokud ano, jste na správném místě.
         </p>
@@ -32,64 +32,34 @@
     </div>
 </div>
 <section id="what" class="bg-light py-1">
-    <div class="container">
-        <h2 class="m-heading text center">
+    <div class="container text-center">
+        <h2 class="m-heading text-center">
             <span class="text-primary">Chcete</span> se dozvědět víc o slavném režisérovi?
         </h2>
         <div class="items">
             <div class="item">
                 <i class="fas fa-film fa-2x"></i>
                 <div>
-                    <h3>Filmy</h3>
-                    <p>
-                        Pulp Fiction: Historky z podsvětí (Pulp Fiction, 1994)
-                    </p>
-                    <p>
-                        Čtyři pokoje (Four Rooms, 1995, povídka Muž z Hollywoodu)
-                    </p>
-                    <p>
-                        Hanebný pancharti (Inglourious Basterds, 2009)
-                    </p>
-                    <p>
-                        Nespoutaný Django (Django Unchained, 2012)
-                    </p>
-                    <p>
-                        Tenkrát v Hollywoodu (Once Upon a Time in Hollywood, 2019)
-                    </p>
-        <div class="items">
-            <div class="item">
-                 <i class="fas fa-person fa-2x"></i>
-                 <div>
-                     <h3>Životopis</h3>
-                    <p>
-                        Quentin Jerome Tarantino (* 27. března 1963 Knoxville, Tennessee) je americký filmový režisér, scenárista a herec, který začátkem devadesátých let proslul jako svěží, drsný i černohumorný vypravěč, který vnesl do tradičních amerických archetypů nový život.
-                        Svoji filmovou kariéru začínal jako uvaděč v kině. 
-                    <p>
-                        Nějaký čas byl i uvaděčem v pornokině. Tuto práci označil jako úplně nejlepší, filmová režie je podle něj až na druhém místě. Když mu bylo 22 let odešel z práce v pornokinu a pracoval následujících pět let ve videopůjčovně VideoArchives.
-                    </p>
-                    <p>
-                        Než se stal slavným scenáristou a režisérem, pobyl krátce i ve vězení, kde skončil kvůli nezaplacenému parkování.
-                    </p>
-        <div class="items">
-            <div class="item">
-                    <i class="fas fa-trophy fa-2x"></i>
-                    <div>
-                        <h3>Ocenění</h3>
-                        <p>
-                           Academy Awards - 2013 - Nespoutaný Django - (nejlepší původní scénář). 1995 - Pulp Fiction: Historky z podsvětí (nejlepší původní scénář).
-                        </p>
-                        <p>
-                            Golden Globes - 2020 - Tenkrát v Hollywoodu - (nejlepší scénář). 2013 - Nespoutaný Django - (nejlepší scénář). 1995 - Pulp Fiction: Historky z podsvětí - (nejlepší scénář)
-                        </p>
-                        <p>
-                            Cannas Film Festival - 1994 - Pulp Fiction: Historky z podsvětí - (zlatá palma)
-                        </p>
-                        <p>
-                            BAFTA - 2013 - Nespoutaný Django - (Nejlepší původní scénář). 1995 - Pulp Fiction: Povídky z podsvětí - (Nejlepší původní scénář).
-                        </p>
-        </div>
+                    <h3><a href="filmy.html" class="link">Filmy</a></h3>
+                </div>
             </div>
+            <div class="item">
+                <i class="fas fa-person fa-2x"></i>
+                <div>
+                    <h3><a href="zivotopis.html" class="link">Životopis</a></h3>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-trophy fa-2x"></i>
+                <div>
+                    <h3><a href="oceneni.html" class="link">Ocenění</a></h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
+
 <section id="who">
 <div class="who-img"></div>
 <div class="who-text bg-dark p-2">
